add Practice Advice section

--- a/index.html
+++ b/index.html
@@ -135,5 +135,74 @@
         </div>
       </div>
     </section>
+    <section id="advice">
+      <div class="container">
+        <div class="row advice-row">
+            <h2 class="advice-title">EMPOWER YOUR BUSINESS</h2>
+            <p class="advice-text">
+              Problems trying to resolve the conflict between the two major
+              realms of Classical physics: Newtonian mechanics
+            </p>
+          </div>
+          <div class="row">
+            <ul class="advice-list">
+              <li class="list-item">
+                  <div class="advice-card__decs">
+                    <h4 class="advice-card__title">A single source 
+                      of truth</h4>
+                    <p class="advice-card__text">Newton thought that 
+                      light was made up of 
+                      particles, but then it 
+                      was discovered 
+                    </p>
+                    <div class="advice-card__media">
+                      <img src="./img/advice/1.jpg" alt="ser-img" />
+                    </div>
+                  </div>
+              </li>
+              <li class="list-item">
+                    <div class="advice-card__decs">
+                      <h4 class="advice-card__title">Fastest way to 
+                          organize</h4>
+                      <p class="advice-card__text">“Quantum mechanics” 
+                          is the description of the 
+                          behaviour of matter
+                      </p>
+                      <div class="advice-card__media">
+                        <img src="./img/advice/2.jpg" alt="ser-img" />
+                      </div>
+                    </div>
+                </li>
+                <li class="list-item">
+                    <div class="advice-card__decs">
+                      <h4 class="advice-card__title">Fastest way to 
+                          take action</h4>
+                      <p class="advice-card__text">They describe a 
+                          universe consisting of 
+                          bodies moving
+                      </p>
+                      <div class="advice-card__media">
+                        <img src="./img/advice/3.jpg" alt="ser-img" />
+                      </div>
+                    </div>
+                </li>
+                <li class="list-item">
+                    <div class="advice-card__decs">
+                      <h4 class="advice-card__title">Work better 
+                          together</h4>
+                      <p class="advice-card__text">They finally obtained 
+                          a consistent description 
+                          of the behaviour 
+                      </p>
+                      <div class="advice-card__media">
+                        <img src="./img/advice/4.jpg" alt="ser-img" />
+                      </div>
+                    </div>
+                  </div>
+                </li>
+            </ul>
+          </div>
+        </div>
+    </section>
   </body>
 </html>
