add too  section

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="home-media"></div>
           </div>
           <div class="row">
-            <ul class="ser-list">
+            <ul class="home-list">
               <li class="list-item">
                 <div class="card-item">
                   <img src="./img/icon/digital.png" alt="ser-img" />
@@ -138,7 +138,7 @@
     <section id="advice">
       <div class="container">
         <div class="row advice-row">
-            <h2 class="advice-title">EMPOWER YOUR BUSINESS</h2>
+            <h2 class="advice-title">Practice Advice</h2>
             <p class="advice-text">
               Problems trying to resolve the conflict between the two major
               realms of Classical physics: Newtonian mechanics
@@ -202,6 +202,79 @@
                 </li>
             </ul>
           </div>
+        </div>
+    </section>
+    <section id="services">
+    <div class="container">
+        <div class="row services-row">
+            <div class="services-head">
+              <h3 class="services-head__title">We are providing best business service.</h3>
+              <p class="services-head__text">
+                Problems trying to resolve the conflict between the two major
+                realms of Classical physics: Newtonian mechanics
+              </p>
+            </div>
+            <div class="row">
+                <div class="services-media"><img src="./img/services/services-img.png" alt="ser-img"></div>
+                <div class="services-introduction">
+                    <h3 class="services-title">Most trusted in  our field</h3>
+                 <p class="services-text">Most calendars are designed for teams. Slate is designed for freelancers who want a simple way to plan their schedule.
+                 </p>
+                 <div class="services-list__group">
+                    <ul class="services-list">
+                        <li class="list-item">
+                            <img class="ser-img__one" src="./img/icon/ser-1.png" alt="img">
+                            <h4 class="ser-list__title">the quick fox jumps over the lazy 
+                                dog</h4>
+                                <p class="ser-list__text">Things on a very small scale ...</p>
+                        </li>
+                        <li class="list-item">
+                            <img class="ser-img__too" src="./img/icon/ser-2.png" alt="img">
+                            <h4 class="ser-list__title">the quick fox jumps over the lazy 
+                                dog</h4>
+                                <p class="ser-list__text">Things on a very small scale ...</p>
+                        </li>
+                    </ul>
+                 </div>              
+                </div>
+            </div>
+          </div>  
+    </div>
+    </section>
+    <section id="clients">
+        <div class="container">
+            <div class="row">
+                <ul class="clients-list">
+                    <li class="clients-item">
+                        <img src="./img/clients/1.png" alt="clients">
+                    </li>
+                    <li class="clients-item">
+                        <img src="./img/clients/2.png" alt="clients">
+                    </li>
+                    <li class="clients-item">
+                        <img src="./img/clients/3.png" alt="clients">
+                    </li>
+                    <li class="clients-item">
+                        <img src="./img/clients/4.png" alt="clients">
+                    </li>
+                    <li class="clients-item">
+                        <img src="./img/clients/5.png" alt="clients">
+                    </li>
+                    <li class="clients-item">
+                        <img src="./img/clients/6.png" alt="clients">
+                    </li>
+                </ul>
+            </div>
+            <div class="row clients-row">
+                <div class="clients-card__item row">
+                    <h5 class="clients-title">Subscribe For Latest 
+                        Newsletter</h5>
+                        <div class="input-group">
+                            <input type="email" class="clients-email" placeholder="Your Email" required >
+                            <button type="submit">Subscribe</button>
+                        </div>
+                </div>
+            </div>
         </div>
     </section>
   </body>
