--- a/index.html
+++ b/index.html
@@ -277,5 +277,49 @@
             </div>
         </div>
     </section>
+    
+    <section id="contact">
+        <div class="container">
+          <div class="row contact-row">
+            <div class="contact-introduction">
+              <h3 class="contact-title">WHY CHOOSE US</h3>
+              <p class="contact-text">
+                Problems trying to resolve the conflict between the two major
+                realms of Classical physics: Newtonian mechanics
+              </p>
+            </div>
+            <ul class="contact-list">
+              <li class="contact-item">
+                <div class="contact-card__box">
+                  <img src="./img/icon/phone.png" alt="contact_icon" />
+                  <p class="contact-card__text">georgia.young@example.com</p>
+                  <p class="contact-card__text">georgia.young@ple.com</p>
+                  <h3 class="contact-card__title">Get Support</h3>
+                  <a href="#" class="contact-support__btn">Submit Request</a>
+                </div>
+              </li>
+              <li class="contact-item active">
+                <div class="contact-card__box">
+                  <img src="./img/icon/map.png" alt="contact_icon" />
+                  <p class="contact-card__text">georgia.young@example.com</p>
+                  <p class="contact-card__text">georgia.young@ple.com</p>
+                  <h3 class="contact-card__title">Get Support</h3>
+                  <a href="#" class="contact-support__btn">Submit Request</a>
+
+                </div>
+              </li>
+              <li class="contact-item">
+                <div class="contact-card__box">
+                  <img src="./img/icon/teleg.png" alt="contact_icon" />
+                  <p class="contact-card__text">georgia.young@example.com</p>
+                  <p class="contact-card__text">georgia.young@ple.com</p>
+                 <h3 class="contact-card__title">Get Support</h3>
+                  <a href="#" class="contact-support__btn">Submit Request</a>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
   </body>
 </html>
